# warbell

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  warbell.wxs
.claude/: launch.json
.github/workflows/: pages.yml  release.yml
assets/shaders/: dof.wgsl  foliage_wind.wgsl  foliage_wind_prepass.wgsl  godrays.wgsl  outline.wgsl  terrain.wgsl
crates/core/: Cargo.toml
crates/core/src/: inventory.rs  lib.rs  player.rs  quest.rs  resource_store.rs  town_store.rs  upgrade_store.rs
crates/core/tests/: serde_roundtrip.rs
docs/release-notes/: v0.21.1.md
installer/: tileworld.wxs
scripts/: release.ps1  smoke_test.sh
site/: changelog.html  index.html  robots.txt  sitemap.xml  styles.css
src/: aftermath.rs  ambient_life.rs  atmospherics.rs  banner.rs  biome.rs  biome_desert.rs  biome_forest.rs  biome_rocky.rs  biome_snow.rs  biome_swamp.rs  blockers.rs  boats.rs  bridges.rs  camps.rs  capture.rs  castle.rs  castle_decor.rs  chest.rs  cinematic.rs  combat_fx.rs  compass.rs  controls.rs  critters.rs  debug_panel.rs  debug_stats.rs  decor.rs  defenses.rs  distant.rs  dof.rs  dying.rs  economy.rs  firelight.rs  fish.rs  foliage_wind.rs  footprints.rs  footstep_fx.rs  game_state.rs  godrays.rs  groundcover.rs  groundtest.rs  (+63 more)
src/audio/: ambience.rs  animals.rs  director.rs  footsteps.rs  hero_remarks.rs  lines.rs  mod.rs  music.rs  npc.rs  ork.rs  rival_voice.rs  sfx.rs  synth.rs  voice.rs
src/boss/: mod.rs  models.rs
src/player/: anim.rs  arts.rs  block.rs  camera.rs  charge.rs  combat.rs  health.rs  mod.rs  (+3 more)
tools/: trace_summary.py
(+48 files in other folders)
